[package]
name = "hyperlane-quick-start"
version = "21.3.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A lightweight rust http server with middleware, websocket, sse, and tcp support, built on tokio for cross-platform async networking, hyperlane simplifies modern web service development."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "data",
    "*.log",
    "*.pid",
    "target",
    ".github",
    ".vscode",
    "node_modules",
    "Cargo.lock",
]

[workspace]
resolver = "3"
members = ["application", "bootstrap", "config", "plugin", "resources"]

[workspace.dependencies]
hyperlane_application = { path = "application", version = "21.3.0" }
hyperlane_bootstrap = { path = "bootstrap", version = "21.3.0" }
hyperlane_config = { path = "config", version = "21.3.0" }
hyperlane_plugin = { path = "plugin", version = "21.3.0" }
hyperlane_resources = { path = "resources", version = "21.3.0" }

tracing = "0.1.44"
hyperlane = "20.0.2"
hyperlane-utils = "30.2.0"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies]
hyperlane_bootstrap = { workspace = true }
hyperlane_config = { workspace = true }
hyperlane_plugin = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }

[patch.crates-io]
hyperlane_application = { path = "application" }
hyperlane_bootstrap = { path = "bootstrap" }
hyperlane_config = { path = "config" }
hyperlane_plugin = { path = "plugin" }

[profile.dev]
incremental = true
opt-level = 0
lto = false
panic = "unwind"
debug = false
codegen-units = 16
strip = "none"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
