[package]
name = "hyperlane_app"
version = "9.2.5"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = "Hyperlane application"
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", ".github", "tmp", "**/*.pid", "**/*.log"]

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
hyperlane_config = { workspace = true }
hyperlane_plugin = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
