[package]
name = "hyperlane_application"
version = "21.3.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """Hyperlane application module containing core application logic, controllers, services, and middleware components."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "data",
    "*.log",
    "*.pid",
    "target",
    ".github",
    ".vscode",
    "node_modules",
    "Cargo.lock",
]

[lib]
path = "lib.rs"

[dependencies]
hyperlane_config = { workspace = true }
hyperlane_plugin = { workspace = true }
hyperlane_resources = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
