[package]
name = "hyperlane_bootstrap"
version = "14.1.15"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """Hyperlane bootstrap crate providing application initialization and framework lifecycle management."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", ".github", "tmp", "**/*.pid", "**/*.log"]

[lib]
path = "lib.rs"

[dependencies]
hyperlane_application = { workspace = true }
hyperlane_config = { workspace = true }
hyperlane_plugin = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
async-trait = { workspace = true }
