[package]
name = "hyperlane_bootstrap"
version = "18.1.3"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """Hyperlane bootstrap crate providing application initialization and framework lifecycle management."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "tmp",
    "data",
    "logs",
    "target",
    ".github",
    ".vscode",
    "process",
    "node_modules",
    "**/*.pid",
    "**/*.log",
    "Cargo.lock",
]

[lib]
path = "lib.rs"

[dependencies]
hyperlane_application = { workspace = true }
hyperlane_config = { workspace = true }
hyperlane_plugin = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
