[package]
name = "hyperlane_init"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
hyperlane_app = { workspace = true }
hyperlane_config = { workspace = true }
hyperlane_plugin = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
