[package]
name = "hyperlane_plugin"
version = "9.3.5"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A powerful and extensible plugin system for the hyperlane framework, providing modularity and customization capabilities."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", ".github", "tmp", "**/*.pid", "**/*.log"]

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
hyperlane_resources = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
