[package]
name = "hyperlane_plugin"
version = "18.1.3"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A powerful and extensible plugin system for the hyperlane framework, providing modularity and customization capabilities."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "tmp",
    "data",
    "logs",
    "target",
    ".github",
    ".vscode",
    "process",
    "node_modules",
    "**/*.pid",
    "**/*.log",
    "Cargo.lock",
]

[lib]
path = "lib.rs"

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
