[package]
name = "hyperlane_plugin"
version = "21.3.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A powerful and extensible plugin system for the hyperlane framework, providing modularity and customization capabilities."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "data",
    "*.log",
    "*.pid",
    "target",
    ".github",
    ".vscode",
    "node_modules",
    "Cargo.lock",
]

[lib]
path = "lib.rs"

[dependencies]
hyperlane_resources = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
hyperlane = { workspace = true }
hyperlane-utils = { workspace = true }
