[package]
name = "hyperlane_resources"
version = "10.0.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """Hyperlane resources module containing various resources and utilities used by the framework."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", ".github", "tmp", "**/*.pid", "**/*.log"]

[lib]
path = "lib.rs"

[dependencies]
