[package]
name = "hyperlane_resources"
version = "21.3.0"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """Hyperlane resources module containing various resources and utilities used by the framework."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/hyperlane-dev/hyperlane-quick-start.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "data",
    "*.log",
    "*.pid",
    "target",
    ".github",
    ".vscode",
    "node_modules",
    "Cargo.lock",
]

[lib]
path = "lib.rs"

[dependencies]
